Remove JDK9 workaround
New CLJS resolves need for this. In Java 11 that module is completely removed so the workaround causes a failure now.